lab4/scheduler/.metadata/.plugins/org.eclipse.cdt.ui/scheduler.build.log
00:52:11 **** Incremental Build of configuration Debug for project scheduler ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'SCH_Init':
../Core/Src/main.c:87:9: warning: implicit declaration of function 'SCH_Delete_Task' [-Wimplicit-function-declaration]
   87 |         SCH_Delete_Task(i);
      |         ^~~~~~~~~~~~~~~
../Core/Src/main.c:93:5: warning: implicit declaration of function 'Timer_init' [-Wimplicit-function-declaration]
   93 |     Timer_init();
      |     ^~~~~~~~~~
../Core/Src/main.c:94:5: warning: implicit declaration of function 'Watchdog_init' [-Wimplicit-function-declaration]
   94 |     Watchdog_init();
      |     ^~~~~~~~~~~~~
../Core/Src/main.c: In function 'SCH_Add_Task':
../Core/Src/main.c:136:22: warning: assignment to 'unsigned char' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
  136 |         Error_code_G = "ERROR_SCH_TOO_MANY_TASKS";
      |                      ^
../Core/Src/main.c: In function 'SCH_Dispatch_Tasks':
../Core/Src/main.c:167:5: warning: implicit declaration of function 'SCH_Report_Status' [-Wimplicit-function-declaration]
  167 |     SCH_Report_Status();
      |     ^~~~~~~~~~~~~~~~~
../Core/Src/main.c:169:5: warning: implicit declaration of function 'SCH_Go_To_Sleep' [-Wimplicit-function-declaration]
  169 |     SCH_Go_To_Sleep();
      |     ^~~~~~~~~~~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:173:37: error: unknown type name 'tByte'
  173 | unsigned char SCH_Delete_Task(const tByte TASK_INDEX){
      |                                     ^~~~~
../Core/Src/main.c:173:15: error: conflicting types for 'SCH_Delete_Task'
  173 | unsigned char SCH_Delete_Task(const tByte TASK_INDEX){
      |               ^~~~~~~~~~~~~~~
../Core/Src/main.c:87:9: note: previous implicit declaration of 'SCH_Delete_Task' was here
   87 |         SCH_Delete_Task(i);
      |         ^~~~~~~~~~~~~~~
../Core/Src/main.c: In function 'SCH_Delete_Task':
../Core/Src/main.c:179:22: warning: assignment to 'unsigned char' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
  179 |         Error_code_G = "ERROR_SCH_CANNOT_DELETE_TASK";
      |                      ^
../Core/Src/main.c:182:21: warning: assignment to 'unsigned char' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
  182 |         Return_code = "RETURN_ERROR";
      |                     ^
../Core/Src/main.c:184:21: warning: assignment to 'unsigned char' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
  184 |         Return_code = "RETURN_NORMAL";
      |                     ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:193:6: warning: conflicting types for 'SCH_Go_To_Sleep'
  193 | void SCH_Go_To_Sleep(){
      |      ^~~~~~~~~~~~~~~
../Core/Src/main.c:169:5: note: previous implicit declaration of 'SCH_Go_To_Sleep' was here
  169 |     SCH_Go_To_Sleep();
      |     ^~~~~~~~~~~~~~~
../Core/Src/main.c:197:6: warning: conflicting types for 'SCH_Report_Status'
  197 | void SCH_Report_Status(void) {
      |      ^~~~~~~~~~~~~~~~~
../Core/Src/main.c:167:5: note: previous implicit declaration of 'SCH_Report_Status' was here
  167 |     SCH_Report_Status();
      |     ^~~~~~~~~~~~~~~~~
../Core/Src/main.c:226:1: error: unknown type name 'IWDG_HandleTypeDef'; did you mean 'TIM_HandleTypeDef'?
  226 | IWDG_HandleTypeDef hiwdg;
      | ^~~~~~~~~~~~~~~~~~
      | TIM_HandleTypeDef
../Core/Src/main.c: In function 'MX_IWDG_Init':
../Core/Src/main.c:230:8: error: request for member 'Instance' in something not a structure or union
  230 |   hiwdg.Instance = IWDG;
      |        ^
../Core/Src/main.c:231:8: error: request for member 'Init' in something not a structure or union
  231 |   hiwdg.Init.Prescaler = IWDG_PRESCALER_32;
      |        ^
../Core/Src/main.c:231:26: error: 'IWDG_PRESCALER_32' undeclared (first use in this function)
  231 |   hiwdg.Init.Prescaler = IWDG_PRESCALER_32;
      |                          ^~~~~~~~~~~~~~~~~
../Core/Src/main.c:231:26: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:232:8: error: request for member 'Init' in something not a structure or union
  232 |   hiwdg.Init.Reload = 4095;
      |        ^
../Core/Src/main.c:233:7: warning: implicit declaration of function 'HAL_IWDG_Init'; did you mean 'MX_IWDG_Init'? [-Wimplicit-function-declaration]
  233 |   if (HAL_IWDG_Init(&hiwdg) != HAL_OK) {
      |       ^~~~~~~~~~~~~
      |       MX_IWDG_Init
../Core/Src/main.c: In function 'Watchdog_Refresh':
../Core/Src/main.c:238:2: warning: implicit declaration of function 'HAL_IWDG_Refresh' [-Wimplicit-function-declaration]
  238 |  HAL_IWDG_Refresh(&hiwdg);
      |  ^~~~~~~~~~~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:265:2: warning: implicit declaration of function 'System_Initialization' [-Wimplicit-function-declaration]
  265 |  System_Initialization();
      |  ^~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:269:15: warning: passing argument 1 of 'SCH_Add_Task' from incompatible pointer type [-Wincompatible-pointer-types]
  269 |  SCH_Add_Task("Led_Display", 0, 1000);
      |               ^~~~~~~~~~~~~
      |               |
      |               char *
../Core/Src/main.c:123:36: note: expected 'void (*)()' but argument is of type 'char *'
  123 | unsigned char SCH_Add_Task(void (* pFunction)(), unsigned int DELAY, unsigned int PERIOD)
      |                            ~~~~~~~~^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

00:52:12 Build Failed. 8 errors, 15 warnings. (took 505ms)

